--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .input-field.suffix a  {
   position: absolute;
@@ -45,11 +7,27 @@
   top: 0px;
   right: 0px;
 }
+.progress{
+  background-color:#b3b3b3;
+}
+.indeterminate{
+  background-color:#b3b3b3;
+}
 
 .input-field.suffix i.active {
   color: lightskyblue;
 }
-
+.bg1{
+  background: url("./Components/Images/simpBack.png") no-repeat; 
+  background-size: cover;
+  position: fixed;
+  top: 60px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
 .input-field.suffix input,
 .input-field.suffix textarea {
   margin-right: 3rem;
@@ -63,6 +41,9 @@
 .messages{
   height: 700px;
   overflow-y: scroll;
+  border: 2px solid #dedede;
+  background-color: #f1f1f1;
+  border-radius: 5px;
 }
 .box-blue{
   background-color: #387ef5;
@@ -107,6 +88,7 @@
    
   width: 80%;
   padding: 4px 12px 4px;
+  word-wrap: break-word; 
 }
 
 .box-gray {
@@ -185,6 +167,7 @@
     line-height: 22px;
     margin: 0.5em 1em;
     padding: 4px 12px 4px;
+    word-wrap: break-word; 
     
 
   
